<resources>
    <string name="app_name">Vat App</string>
    <string name="cost_or_total_price">Cost or Total Price</string>
    <string name="select_vat_percentage">Select VAT percentage:</string>
    <string name="_10_percentage">10%</string>
    <string name="_15_percentage">15%</string>
    <string name="_20_percentage">20%</string>
    <string name="round_up_total">Round Up Total??</string>
    <string name="calculate_vat">CALCULATE VAT</string>
</resources>