<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_green_theme"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tv_cost_or_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/cost_or_total_price"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_select_vat_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_vat_percentage"
            android:textColor="@color/black"
            android:layout_margin="16dp"


            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="@string/_10_percentage" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_15_percentage" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20_percentage" />
        </RadioGroup>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"

            android:text="@string/round_up_total"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/dark_green"

            android:clickable="true"

            android:text="@string/calculate_vat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>